@@ -73,6 +73,7 @@
 #include "./bu/env.h"
 #include "./bu/file.h"
 #include "./bu/glob.h"
+#include "./bu/interrupt.h"
 #include "./bu/path.h"
 #include "./bu/getopt.h"
 #include "./bu/hash.h"
