@@ -238,13 +238,13 @@ main(int argc, char **argv)
 	    snprintf(name, sizeof(name), "%s.%d", input_basename, framenumber);
 	}
 
-	ifname = bu_realpath(name, NULL);
+	ifname = bu_file_realpath(name, NULL);
 	if ((fd=open(ifname, 0))<0) {
 	    perror(ifname);
-	    bu_free(ifname, "ifname alloc from bu_realpath");
+	    bu_free(ifname, "ifname alloc from bu_file_realpath");
 	    goto done;
 	}
-	bu_free(ifname, "ifname alloc from bu_realpath");
+	bu_free(ifname, "ifname alloc from bu_file_realpath");
 
 	/* Read in .pix file.  Bottom to top */
 	i = read(fd, obuf, scanbytes);
