@@ -64,13 +64,13 @@ main(int argc, char **argv)
 	bu_exit(1, "Usage: dpix-pix file.dpix > file.pix\n");
     }
 
-    ifname = bu_realpath(argv[1], NULL);
+    ifname = bu_file_realpath(argv[1], NULL);
     if ((fd = open(ifname, 0)) < 0) {
 	perror(ifname);
-	bu_free(ifname, "ifname alloc from bu_realpath");
+	bu_free(ifname, "ifname alloc from bu_file_realpath");
 	exit(1);
     }
-    bu_free(ifname, "ifname alloc from bu_realpath");
+    bu_free(ifname, "ifname alloc from bu_file_realpath");
 
     if (isatty(fileno(stdout))) {
 	bu_exit(2, "dpix-pix:  binary output directed to terminal, aborting\n");
