@@ -219,14 +219,14 @@ parse_args(int ac, char **av)
 	    usage();
     }
     if (bu_optind < ac) {
-	char *ifname = bu_realpath(av[bu_optind], NULL);
+	char *ifname = bu_file_realpath(av[bu_optind], NULL);
 	if (freopen(ifname, "r", stdin) == (FILE *)NULL) {
 	    perror(ifname);
-	    bu_free(ifname, "ifname alloc from bu_realpath");
+	    bu_free(ifname, "ifname alloc from bu_file_realpath");
 	    bu_exit (-1, NULL);
 	} else
 	    filename = av[bu_optind];
-	bu_free(ifname, "ifname alloc from bu_realpath");
+	bu_free(ifname, "ifname alloc from bu_file_realpath");
     }
     if (bu_optind+1 < ac)
 	fprintf(stderr, "%s: Excess arguments ignored\n", progname);
